[tool.poetry]
name = "data-visualisation"
version = "0.1.0"
description = ""
authors = ["Alex Hughes <alexhughes406@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
matplotlib = "^3.9.0"
pygal = "^3.0.4"
scipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
